--- a/.env
+++ b/.env
@@ -14,6 +14,6 @@ SWAGGER_END_POINT='docs'
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DATABASE_URL="postgresql://admin:admin@localhost:5432"
+DATABASE_URL="postgresql://admin:admin@challenge_db:5432"
 DATABASE_USER=admin
 DATABASE_PASSWORD=admin
