--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - '/app/node_modules'
     ports:
       - '8000:8000'
-    command: npm run start:prod
+    command: npm run start:dev
     restart: unless-stopped
     networks:
       - challenge-networks
